website/websites/gp4/code/partialsums-scala-2.log
BUILD COMMANDS FOR: partialsums.scala-2.scala

Sat Jan 27 18:27:13 PST 2007

( if [ ! -d partialsums.scala-2.scala_run ] ; then mkdir partialsums.scala-2.scala_run ; fi)
cp /home/dunham/gp4/shootout/bench/partialsums/partialsums.scala-2.scala partialsums.scala-2.scala_run/partialsums.scala
( cd partialsums.scala-2.scala_run ; /opt/scala-2.3.3/bin/scalac partialsums.scala )
partialsums.scala:45: error: value printf is not a member of object scala.Console
         Console.printf( f + "(2/3)^k\n" )(a1)
                ^
partialsums.scala:46: error: value printf is not a member of object scala.Console
         Console.printf( f + "k^-0.5\n" )(a2)
                ^
partialsums.scala:47: error: value printf is not a member of object scala.Console
         Console.printf( f + "1/k(k+1)\n" )(a3)
                ^
partialsums.scala:48: error: value printf is not a member of object scala.Console
         Console.printf( f + "Flint Hills\n" )(a4)
                ^
partialsums.scala:49: error: value printf is not a member of object scala.Console
         Console.printf( f + "Cookson Hills\n" )(a5)
                ^
partialsums.scala:50: error: value printf is not a member of object scala.Console
         Console.printf( f + "Harmonic\n" )(a6)
                ^
partialsums.scala:51: error: value printf is not a member of object scala.Console
         Console.printf( f + "Riemann Zeta\n" )(a7)
                ^
partialsums.scala:52: error: value printf is not a member of object scala.Console
         Console.printf( f + "Alternating Harmonic\n" )(a8)
                ^
partialsums.scala:53: error: value printf is not a member of object scala.Console
         Console.printf( f + "Gregory\n" )(a9)
                ^
9 errors found
make[3]: [partialsums.scala-2.scala_run] Error 1 (ignored)
touch partialsums.scala-2.scala_run

=================================================================
COMMAND LINE (%A is single numeric argument):

 JAVACMD="/opt/sun-jdk-1.6.0/bin/java $JDKFLAGS -server" /opt/scala-2.3.3/bin/scala -classpath partialsums.scala-2.scala_run partialsums %A
************************************************************
*   TEST (partialsums.scala-2.scala_run) FAILED - ERROR:  partialsums.scala-2.scala_out differs from Output.25000
************************************************************
-rw-r--r-- 1 dunham users 214 Feb  5  2006 Output.25000
-rw-r--r-- 1 dunham users  26 Jan 27 18:27 partialsums.scala-2.scala_out


PROGRAM OUTPUT
==============
no such file: partialsums
